--- a/AppVendasWeb/AppVendasWeb/appsettings.json
+++ b/AppVendasWeb/AppVendasWeb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnection": "Data Source=DSN-1259045\\SQLEXPRESS; Initial Catalog=dbVendasApp;Integrated Security=True; TrustServerCertificate=True;"
+  }
 }
